rerolling the dice on this backend thing

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,16 +7,25 @@
             "UserPoolId"
           ],
           "category": "auth",
-          "resourceName": "lexhoa53b91044"
+          "resourceName": "lexhoaauth"
         }
       ],
       "output": {
         "authConfig": {
-          "additionalAuthenticationProviders": [],
+          "additionalAuthenticationProviders": [
+            {
+              "apiKeyConfig": {
+                "apiKeyExpirationDate": "2025-11-05T13:46:40.256Z",
+                "apiKeyExpirationDays": 365,
+                "description": "LexHOApublicAPI"
+              },
+              "authenticationType": "API_KEY"
+            }
+          ],
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authlexhoa53b91044"
+              "userPoolId": "authlexhoaauth"
             }
           }
         }
@@ -26,7 +35,7 @@
     }
   },
   "auth": {
-    "lexhoa53b91044": {
+    "lexhoaauth": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
@@ -61,7 +70,7 @@
             "AppClientID"
           ],
           "category": "auth",
-          "resourceName": "lexhoa53b91044"
+          "resourceName": "lexhoaauth"
         }
       ],
       "providerPlugin": "awscloudformation",
