--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,4 +1,15 @@
-projects: {}
+projects:
+  lexhoa:
+    schemaPath: src/graphql/schema.json
+    includes:
+      - src/graphql/**/*.js
+    excludes:
+      - ./amplify/**
+    extensions:
+      amplify:
+        codeGenTarget: javascript
+        generatedFileName: ''
+        docsFilePath: src/graphql
 extensions:
   amplify:
     version: 3
