--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-appsync": "^4.1.10",
     "aws-appsync-auth-link": "^3.0.5",
     "aws-appsync-subscription-link": "^3.1.3",
+    "aws-sdk": "^2.1692.0",
     "graphql": "^15.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
