updates to profile logic to display the correct information on property cards, especially for owner / tenant information related to who the viewer is.  Also removed ONWERS group logic from tables.  We will be removing this cognito group.

--- a/amplify/backend/function/GenerateProfileOnSignUp/src/package.json
+++ b/amplify/backend/function/GenerateProfileOnSignUp/src/package.json
@@ -8,6 +8,9 @@
     "@types/aws-lambda": "^8.10.92"
   },
   "dependencies": {
-    "aws-sdk": "^2.1692.0"
+    "aws-sdk": "^2.1692.0",
+    "aws-appsync": "^4.1.9",
+    "graphql-tag": "^2.12.6",
+    "isomorphic-fetch": "^3.0.0"
   }
 }
