--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -20,6 +20,9 @@
                 "description": "test key"
               },
               "authenticationType": "API_KEY"
+            },
+            {
+              "authenticationType": "AWS_IAM"
             }
           ],
           "defaultAuthentication": {
