reset amplify, issue syncing with backend. cleared functions to rebuild

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -71,8 +71,7 @@
           "attributes": [
             "UserPoolId",
             "AppClientIDWeb",
-            "AppClientID",
-            "IdentityPoolId"
+            "AppClientID"
           ],
           "category": "auth",
           "resourceName": "lexhoa4faca5b8"
@@ -98,90 +97,6 @@
       ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
-    },
-    "addUserToGroup": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "lexhoa4faca5b8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "getCognitoGroups": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "lexhoa4faca5b8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "getCognitoUser": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "lexhoa4faca5b8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "listGroupsForUser": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "lexhoa4faca5b8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "listUsersInGroup": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "lexhoa4faca5b8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "removeUserFromGroup": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "lexhoa4faca5b8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
     }
   },
   "parameters": {
@@ -198,198 +113,6 @@
         {
           "category": "function",
           "resourceName": "GenerateProfileOnSignUp"
-        }
-      ]
-    },
-    "AMPLIFY_function_addUserToGroup_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "addUserToGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_addUserToGroup_region": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "addUserToGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_addUserToGroup_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "addUserToGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_addUserToGroup_userPoolId": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "addUserToGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoGroups_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoGroups"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoGroups_region": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoGroups"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoGroups_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoGroups"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoGroups_userPoolId": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoGroups"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoUser_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoUser_region": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoUser_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_getCognitoUser_userPoolId": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "getCognitoUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_listGroupsForUser_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listGroupsForUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_listGroupsForUser_region": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listGroupsForUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_listGroupsForUser_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listGroupsForUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_listGroupsForUser_userPoolId": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listGroupsForUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_listUsersInGroup_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listUsersInGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_listUsersInGroup_region": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listUsersInGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_listUsersInGroup_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listUsersInGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_listUsersInGroup_userPoolId": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "listUsersInGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_removeUserFromGroup_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "removeUserFromGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_removeUserFromGroup_region": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "removeUserFromGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_removeUserFromGroup_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "removeUserFromGroup"
-        }
-      ]
-    },
-    "AMPLIFY_function_removeUserFromGroup_userPoolId": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "removeUserFromGroup"
         }
       ]
     }
