two functions created for managing cognito group, more to come

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -97,6 +97,34 @@
       ],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "addUserToGroupResolver": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "lexhoa4faca5b8"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "listUsersInGroupResolver": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "lexhoa4faca5b8"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "parameters": {
@@ -113,6 +141,70 @@
         {
           "category": "function",
           "resourceName": "GenerateProfileOnSignUp"
+        }
+      ]
+    },
+    "AMPLIFY_function_addUserToGroupResolver_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addUserToGroupResolver"
+        }
+      ]
+    },
+    "AMPLIFY_function_addUserToGroupResolver_region": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addUserToGroupResolver"
+        }
+      ]
+    },
+    "AMPLIFY_function_addUserToGroupResolver_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addUserToGroupResolver"
+        }
+      ]
+    },
+    "AMPLIFY_function_addUserToGroupResolver_userPoolId": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addUserToGroupResolver"
+        }
+      ]
+    },
+    "AMPLIFY_function_listUsersInGroupResolver_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "listUsersInGroupResolver"
+        }
+      ]
+    },
+    "AMPLIFY_function_listUsersInGroupResolver_region": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "listUsersInGroupResolver"
+        }
+      ]
+    },
+    "AMPLIFY_function_listUsersInGroupResolver_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "listUsersInGroupResolver"
+        }
+      ]
+    },
+    "AMPLIFY_function_listUsersInGroupResolver_userPoolId": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "listUsersInGroupResolver"
         }
       ]
     }
