--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@aws-amplify/api-rest": "^4.1.6",
     "@aws-amplify/ui-react": "^6.5.4",
     "@aws-sdk/client-cognito-identity-provider": "^3.772.0",
     "@testing-library/jest-dom": "^5.17.0",
