feat: implement document library frontend

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -209,5 +209,12 @@
         }
       ]
     }
+  },
+  "storage": {
+    "hoaDocuments": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
+    }
   }
 }
