--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@aws-amplify/api-rest": "^4.1.6",
     "@aws-amplify/ui-react": "^6.5.4",
     "@aws-sdk/client-cognito-identity-provider": "^3.772.0",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
