--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+
+# Amplify auto-generated files (regenerated per environment)
+amplify/team-provider-info.json
+src/graphql/schema.json
